--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -34,14 +34,13 @@
               android:background="@android:color/black"
               android:gravity="center"
               android:imeOptions="actionDone"
-              android:inputType="textPhonetic"
+              android:inputType="textPhonetic|textCapSentences"
               android:textSize="12sp"
               android:paddingBottom="5dp"
               android:paddingTop="5dp"
               android:singleLine="true"
               android:textColor="@android:color/white"
               android:visibility="gone"
-
             />
 
     </RelativeLayout>
