--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -7,20 +7,20 @@
     android:layout_height="match_parent"
     tools:context="com.linute.linute.LoginAndSignup.CollegePickerActivity">
 
-    <LinearLayout android:id="@+id/findFriends_search_parent"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/colorPrimary"
-                  android:elevation="4dp">
+    <!--<LinearLayout android:id="@+id/findFriends_search_parent"-->
+                  <!--android:layout_width="match_parent"-->
+                  <!--android:layout_height="wrap_content"-->
+                  <!--android:background="@color/colorPrimary"-->
+                  <!--android:elevation="4dp">-->
 
+        <!--android:background="@drawable/search_view_background"-->
         <android.support.v7.widget.SearchView android:id="@+id/findFriends_search_view"
                                               android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
-                                              android:layout_margin="8dp"
-                                              android:background="@drawable/search_view_background"
+                                              android:background="@color/white"
                                               android:inputType="textPersonName"
                                               android:queryHint="Search"/>
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
     <TextView android:id="@+id/findFriends_text"
@@ -84,7 +84,7 @@
     <android.support.v7.widget.RecyclerView android:id="@+id/findFriends_recycler_view"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:layout_below="@id/findFriends_search_parent"
+                                            android:layout_below="@id/findFriends_search_view"
         />
 
 </RelativeLayout>
