--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,10 @@
 
     <color name="fifty_black">#80000000</color>
     <color name="eighty_black">#CC000000</color>
+    <color name="twentyfive_black">#40000000</color>
     <color name="user_name_blue">#17607d</color>
+
+    <color name="seperator_color">#d3d6db</color>
 
 
 
