--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,7 +13,7 @@
     <dimen name="padding_s">4dp</dimen>
 
 
-    <dimen name="feed_profile_image_radius">60dp</dimen>
+    <dimen name="feed_profile_image_radius">52dp</dimen>
 
 
     <dimen name="updatefragment_picture_size">45dp</dimen>
@@ -43,8 +43,13 @@
 
     <dimen name="spacing">8dp</dimen>
 
+    <dimen name="list_item_height">75dp</dimen>
 
+
+    <dimen name="sub_font_size">12sp</dimen>
     <dimen name="body_font_size">14sp</dimen>
     <dimen name="header_font_size">16sp</dimen>
+
+    <dimen name="list_space">6dp</dimen>
 
 </resources>
