--- a/app/src/main/res/layout/squarecamera__fragment_camera.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_camera.xml
@@ -41,10 +41,10 @@
         <ImageButton android:id="@+id/cameraFragment_galleryButton"
                      android:layout_width="0px"
                      android:layout_height="wrap_content"
-                     android:background="@android:color/transparent"
-                     android:src="@drawable/ic_action_image_photo_library"
                      android:layout_gravity="center"
-                     android:layout_weight="1"/>
+                     android:layout_weight="1"
+                     android:background="@android:color/transparent"
+                     android:src="@drawable/ic_action_image_photo_library"/>
 
     </LinearLayout>
 
