--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,14 @@
                 tools:background="@color/fifty_black"
                 tools:context=".LoginAndSignup.LinuteLoginFragment">
 
+    <ImageView android:id="@android:id/home"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:alpha="0.35"
+               android:padding="@dimen/activity_horizontal_margin"
+               android:src="@drawable/ic_action_navigation_arrow_back_inverted"
+        />
+
     <LinearLayout
         android:id="@+id/signin_email_login_form"
         android:layout_width="match_parent"
