--- a/app/src/main/res/drawable/post_likes_selector.xml
+++ b/app/src/main/res/drawable/post_likes_selector.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/inactive_heart" android:state_checked="false"/>
-    <item android:drawable="@drawable/ic_icon_like_copy" android:state_checked="true"/>
-    <item android:drawable="@drawable/inactive_heart"/>
+    <item android:drawable="@drawable/ic_unlike" android:state_checked="false"/>
+    <item android:drawable="@drawable/ic_like" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_unlike"/>
 
     <!-- default state -->
 </selector>
