--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -153,7 +153,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
                 android:theme="@style/MyEditTextTheme"
-                android:hint="@string/prompt_password"
+                android:hint="New password"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
