--- a/app/src/main/res/layout/empty_cell_holders.xml
+++ b/app/src/main/res/layout/empty_cell_holders.xml
@@ -10,7 +10,9 @@
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:src = "@drawable/no_updates"
-               android:layout_margin="64dp"
+               android:layout_marginStart="100dp"
+               android:layout_marginEnd="100dp"
+               android:layout_marginTop="32dp"
     />
 
 </LinearLayout>
