--- a/app/src/main/res/layout/fragment_discover_feed.xml
+++ b/app/src/main/res/layout/fragment_discover_feed.xml
@@ -14,15 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <TextView android:id="@+id/discoverFragment_no_found"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:gravity="center"
-                  android:visibility="gone"
-                  android:layout_centerHorizontal="true"
-                  android:layout_margin="64dp"
-                  android:textSize="16sp"
-                  android:layout_marginTop="175dp"/>
+        <ImageView android:id="@+id/discover_no_posts"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center_horizontal"
+                   android:layout_marginStart="100dp"
+                   android:layout_marginEnd="100dp"
+                   android:layout_marginTop="50dp"
+                   android:visibility="gone"
+        />
     </RelativeLayout>
 
 
