--- a/app/src/main/res/layout/fragment_updates.xml
+++ b/app/src/main/res/layout/fragment_updates.xml
@@ -23,7 +23,7 @@
                android:layout_marginEnd="64dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/no_updates"
-
+               android:visibility="gone"
     />
 
 </RelativeLayout>
