--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     android:id="@+id/chat_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -28,7 +29,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_rooms"/>
+        <FrameLayout android:id="@+id/fragment"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
