--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -3,13 +3,17 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.linute.linute.MainContent.Chat.RoomsActivityFragment"
-                tools:showIn="@layout/activity_rooms">
+                tools:context="com.linute.linute.MainContent.Chat.RoomsActivityFragment">
 
+    <TextView android:id="@+id/rooms_empty_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="100dp"
+              android:text="No messages..."
+              android:textSize="@dimen/header_font_size"
+              android:visibility="gone"
+    />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rooms_list"
