--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -2,44 +2,50 @@
 <LinearLayout
     android:id="@+id/rooms_list_linear"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:orientation="horizontal">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/rooms_user_image"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="@dimen/profile_image_radius"
+        android:layout_height="@dimen/profile_image_radius"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:scaleType="centerCrop"
         android:src="@drawable/icon_user"
-        card_view:border="false"
-        card_view:border_color="#EEEEEE"
-        card_view:border_width="0dp"
-        card_view:shadow="false"
-        card_view:shadow_color="#8BC34A"
-        card_view:shadow_radius="10"/>
+        app:border_color="@color/seperator_color"
+        app:border_width="1dp"
+
+    />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/rooms_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Naomi Doll"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorAccent"/>
+            android:maxLines="1"
+            android:textColor="@color/user_name_blue"
+            android:textSize="@dimen/body_font_size"
+            tools:text="Naomi Test"/>
 
         <TextView
             android:id="@+id/rooms_user_last_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hey there Job"/>
+            android:maxLines="2"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/fifty_black"
+            android:textSize="@dimen/sub_font_size"
+            tools:text="Hey there Job"/>
     </LinearLayout>
 
 </LinearLayout>
